# blockpedia

./: .gitignore  .markdownlint.json  .markdownlintignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  test_blocks_data.json  test_data_sources.sh
.github/workflows/: ci.yml
data/: bedrock_blocks_b2j.json  color_cache.json
docs/: BLOCK_PALETTE_EXAMPLES.md
examples/: block_palette_showcase.rs  demo.rs  filtered_palette_showcase.rs  gradient_demo.rs  query_builder_demo.rs
src/: bedrock_data_adapter.rs  bedrock_mapping.rs  block_entity.rs  data_sources.rs  errors.rs  fetchers.rs  lib.rs  queries.rs  query_builder.rs  tests.rs  transforms.rs  wasm.rs
src/color/: block_palettes.rs  extraction.rs  mod.rs  palettes.rs  similarity.rs  spaces.rs  texture_mapping.rs
tests/: block_palette_test.rs  comprehensive_gradient_test.rs  gradient_palettes_test.rs  query_builder_test.rs  transforms_test.rs  translation_test.rs
